update middleware and proxy
